samples/_failures_safe/1761655676_fe5158_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b73cecb.c: In function ‘main’:
./samples/SAFE/__tmp_8b73cecb.c:151: error: expected ‘{’ at end of input
